<resources>
    <string name="app_name">Poke-Tracker</string>
    <string name="app_name_label">Poke-Tracker</string>
    <string name="subheader_label">Register new catch</string>
    <string name="national_number_label">National Number</string>
    <string name="name_label">Name</string>
    <string name="species_label">Species</string>
    <string name="gender_label">Gender</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="level_label">Level</string>
    <string name="base_stats_header">Base Stats</string>
    <string name="hp_label">HP</string>
    <string name="attack_label">Attack</string>
    <string name="defense_label">Defense</string>
    <string name="save_button">Save</string>
    <string name="reset_button">Reset</string>
    <string name="female_radio_button">Female</string>
    <string name="male_radio_button">Male</string>
    <string name="view_button">View</string>
    <string name="delete_button">Delete</string>
    <string name="back_button">Back</string>
    <string name="previous_button">&lt;</string>
    <string name="next_button">&gt;</string>
</resources>