<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_label"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/subheaderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:text="@string/subheader_label" />

    <TextView
        android:id="@+id/nationalNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/national_number_label" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name_label" />

    <TextView
        android:id="@+id/speciesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/species_label" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gender_label" />

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/height_label" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weight_label" />

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/level_label" />

    <TextView
        android:id="@+id/baseStatsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/base_stats_header"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/hp_label" />

    <TextView
        android:id="@+id/attackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/attack_label" />

    <TextView
        android:id="@+id/defenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/defense_label" />

    <EditText
        android:id="@+id/nationalNumberET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/speciesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/heightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/weightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/hpET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/attackET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/defenseET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save_button" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/reset_button" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:scaleX=".75"
            android:scaleY=".75"
            android:text="@string/female_radio_button"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/genderLabel"
            app:layout_constraintEnd_toStartOf="@+id/maleRadioButton" />

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scaleX=".75"
            android:scaleY=".75"
            android:text="@string/male_radio_button"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/genderLabel"
            app:layout_constraintEnd_toEndOf="@+id/speciesET" />

    </RadioGroup>

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/levels" />


</TableLayout>