<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewDatabase">

    <TextView
        android:id="@+id/appNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/subheaderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subheader_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameLabel" />

    <TextView
        android:id="@+id/nationalNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="130dp"
        android:text="@string/national_number_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="@+id/nationalNumberLabel"
        app:layout_constraintTop_toBottomOf="@+id/nationalNumberLabel" />

    <TextView
        android:id="@+id/speciesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/species_label"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gender_label"
        app:layout_constraintStart_toStartOf="@+id/speciesLabel"
        app:layout_constraintTop_toBottomOf="@+id/speciesLabel" />

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/height_label"
        app:layout_constraintStart_toStartOf="@+id/genderLabel"
        app:layout_constraintTop_toBottomOf="@+id/genderLabel" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weight_label"
        app:layout_constraintStart_toStartOf="@+id/heightLabel"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel" />

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/level_label"
        app:layout_constraintStart_toStartOf="@+id/weightLabel"
        app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

    <TextView
        android:id="@+id/baseStatsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/base_stats_header"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelLabel" />

    <TextView
        android:id="@+id/hpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/hp_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseStatsHeader" />

    <TextView
        android:id="@+id/attackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/attack_label"
        app:layout_constraintStart_toStartOf="@+id/hpLabel"
        app:layout_constraintTop_toBottomOf="@+id/hpLabel" />

    <TextView
        android:id="@+id/defenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/defense_label"
        app:layout_constraintStart_toStartOf="@+id/attackLabel"
        app:layout_constraintTop_toBottomOf="@+id/attackLabel" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defenseLabel" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteButton" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/previous_button"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toTopOf="@+id/deleteButton" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/next_button"
        app:layout_constraintStart_toEndOf="@+id/deleteButton"
        app:layout_constraintTop_toTopOf="@+id/deleteButton" />

    <TextView
        android:id="@+id/nationalNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nationalNumberLabel" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/nationalNumberTV"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/speciesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/nameTV"
        app:layout_constraintTop_toTopOf="@+id/speciesLabel" />

    <TextView
        android:id="@+id/genderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/speciesTV"
        app:layout_constraintTop_toTopOf="@+id/genderLabel" />

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/genderTV"
        app:layout_constraintTop_toTopOf="@+id/heightLabel" />

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/heightTV"
        app:layout_constraintTop_toTopOf="@+id/weightLabel" />

    <TextView
        android:id="@+id/levelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/weightTV"
        app:layout_constraintTop_toTopOf="@+id/levelLabel" />

    <TextView
        android:id="@+id/hpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/levelTV"
        app:layout_constraintTop_toTopOf="@+id/hpLabel" />

    <TextView
        android:id="@+id/attackTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/hpTV"
        app:layout_constraintTop_toTopOf="@+id/attackLabel" />

    <TextView
        android:id="@+id/defenseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/attackTV"
        app:layout_constraintTop_toTopOf="@+id/defenseLabel" />

    <TextView
        android:id="@+id/idTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheaderLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>