<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/subheaderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subheader_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameLabel" />

    <TextView
        android:id="@+id/nationalNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/national_number_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name_label"
        app:layout_constraintStart_toStartOf="@+id/nationalNumberLabel"
        app:layout_constraintTop_toBottomOf="@+id/nationalNumberLabel" />

    <TextView
        android:id="@+id/speciesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/species_label"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gender_label"
        app:layout_constraintStart_toStartOf="@+id/speciesLabel"
        app:layout_constraintTop_toBottomOf="@+id/speciesLabel" />

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/height_label"
        app:layout_constraintStart_toStartOf="@+id/genderLabel"
        app:layout_constraintTop_toBottomOf="@+id/genderLabel" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weight_label"
        app:layout_constraintStart_toStartOf="@+id/heightLabel"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel" />

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/level_label"
        app:layout_constraintStart_toStartOf="@+id/weightLabel"
        app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

    <TextView
        android:id="@+id/baseStatsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/base_stats_header"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelLabel" />

    <TextView
        android:id="@+id/hpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/hp_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseStatsHeader" />

    <TextView
        android:id="@+id/attackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/attack_label"
        app:layout_constraintStart_toStartOf="@+id/hpLabel"
        app:layout_constraintTop_toBottomOf="@+id/hpLabel" />

    <TextView
        android:id="@+id/defenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/defense_label"
        app:layout_constraintStart_toStartOf="@+id/attackLabel"
        app:layout_constraintTop_toBottomOf="@+id/attackLabel" />

    <EditText
        android:id="@+id/nationalNumberET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nationalNumberLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="@+id/nationalNumberET" />

    <EditText
        android:id="@+id/speciesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/speciesLabel"
        app:layout_constraintEnd_toEndOf="@+id/nameET" />

    <EditText
        android:id="@+id/heightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightLabel"
        app:layout_constraintEnd_toEndOf="@+id/speciesET" />

    <EditText
        android:id="@+id/weightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabel"
        app:layout_constraintEnd_toEndOf="@+id/heightET" />

    <EditText
        android:id="@+id/hpET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hpLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/attackET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/attackLabel"
        app:layout_constraintEnd_toEndOf="@+id/hpET" />

    <EditText
        android:id="@+id/defenseET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/defenseLabel"
        app:layout_constraintEnd_toEndOf="@+id/attackET" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="@+id/defenseET"
        app:layout_constraintTop_toBottomOf="@+id/defenseET" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        app:layout_constraintStart_toStartOf="@+id/defenseLabel"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/speciesET"
        app:layout_constraintTop_toBottomOf="@+id/speciesET">

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:scaleX=".75"
            android:scaleY=".75"
            android:text="@string/female_radio_button"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/genderLabel"
            app:layout_constraintEnd_toStartOf="@+id/maleRadioButton" />

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scaleX=".75"
            android:scaleY=".75"
            android:text="@string/male_radio_button"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/genderLabel"
            app:layout_constraintEnd_toEndOf="@+id/speciesET" />

    </RadioGroup>

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/levels"
        app:layout_constraintBaseline_toBaselineOf="@+id/levelLabel"
        app:layout_constraintEnd_toEndOf="@+id/weightET" />


</androidx.constraintlayout.widget.ConstraintLayout>